Fix flexbox wrap on musicians route, add conditional to truncateBio

--- a/src/app/musician-list/musician-list.component.scss
+++ b/src/app/musician-list/musician-list.component.scss
@@ -1,3 +1,4 @@
 .tiles {
   display: flex;
+  flex-wrap: wrap;
 }
